Updated travel website UI

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,7 +21,7 @@
 
       <section class="main">
         <div class="main-content">
-          <h1>Travel</h1>
+          <h1>Travel!..</h1>
           <p>Discover beautiful places around the world.!!!</p>
           <a href="#destinations" class="btn">Read More</a>
         </div>
