--- a/HTML/tours.html
+++ b/HTML/tours.html
@@ -22,7 +22,7 @@
         <div class="card-container">
           <div class="card">
             <img
-              src="/img/enjoy1.jpg"
+              src="/img/beach1.jpg"
               alt=""
             />
             <p>Beach Tours</p>
