--- a/HTML/Booking.html
+++ b/HTML/Booking.html
@@ -61,7 +61,7 @@
       <!-- SUCCESS POPUP -->
       <div id="success" class="popup">
         <div class="popup-content">
-          <h2>✅ Booking Successful!</h2>
+          <h2>Booking Successful!</h2>
           <p>Your tour has been booked successfully.</p>
           <a href="#" class="close-btn">OK</a>
         </div>
