--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Travel.co</title>
+    <title>Travel Website</title>
     <link rel="stylesheet" href="/CSS/style.css" />
   </head>
   <body>
@@ -33,7 +33,7 @@
         <div class="Journey-Photos">
           <div class="card">
             <img src="/img/city1.jpg" alt="" />
-            <p>Santorini, Greece</p>
+            <p>Japan</p>
           </div>
 
           <div class="card">
@@ -43,7 +43,7 @@
 
           <div class="card">
             <img src="/img/main3.jpeg" alt="" />
-            <p>San Francisco</p>
+            <p>Korea</p>
           </div>
         </div>
       </section>
@@ -55,7 +55,7 @@
       </section>
 
       <footer class="Footer">
-        <h4>© 2026 Travel.co</h4>
+        <h4>&copy; 2026 Travel.co</h4>
         <p>Owner: Sanika Shinde</p>
         <p>Contact: +91 98765 43210 | travelco@gmail.com</p>
       </footer>
