--- a/HTML/package.html
+++ b/HTML/package.html
@@ -61,7 +61,7 @@
       </section>
 
       <footer class="Footer">
-        <h4>© 2026 Travel.co</h4>
+        <h4>&copy; 2026 Travel.co</h4>
         <p>Owner: Sanika Shinde</p>
         <p>Contact: +91 98765 43210 | travelco@gmail.com</p>
       </footer>
