--- a/HTML/tours.html
+++ b/HTML/tours.html
@@ -12,7 +12,8 @@
         <h2>Travel.co</h2>
         <div class="menu">
           <a href="index.html">Home</a>
-          <a href="#packages">Packages</a>
+       
+           <a href="package.html">Package</a>
         </div>
       </div>
 
@@ -39,7 +40,7 @@
       </section>
 
       <div class="Footer">
-        <h4>© 2026 Travel.co</h4>
+        <h4>&copy; 2026 Travel.co</h4>
         <p>Owner: Sanika Shinde</p>
         <p>Contact: +91 98765 43210 | travelco@gmail.com</p>
       
